# epic-python

./: .gitignore  BetterPython.py  LICENSE  README.md  epic.py  gui_calculator.py  innocent-programmer.py  nogui_calculator.py  pyproject.toml  setup.py  testing.py
epic-python/: epic.py  test.py
epic_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
