[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epic-python"
version = "0.1.0-alpha"
authors = [
    { name="LDM", email="ldmdev64@gmail.com" }
]
description = "EPIC (Extremely Problematic and Inconventient Code) for Python!"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/LDMGamingYT/epic-python"
"Bug Tracker" = "https://github.com/LDMGamingYT/epic-python/issues"